Fix dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -159,3 +159,40 @@ input:focus-visible {
   margin-bottom: var(--size-3);
   gap: var(--size-4);
 }
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background-color: var(--gray-9);
+  }
+
+  .app-title {
+    color: var(--cyan-4);
+  }
+
+  .form-container {
+    background-color: var(--gray-8);
+    border-color: var(--gray-7);
+  }
+
+  .form textarea,
+  .form input {
+    border-color: var(--gray-5);
+    background-color: var(--gray-7);
+    color: var(--gray-0);
+  }
+
+  .button-delete {
+    border: var(--border-size-1) solid var(--cyan-8);
+    background-color: var(--gray-8);
+    color: var(--cyan-0);
+  }
+
+  .button-delete:hover {
+    background-color: var(--cyan-6);
+    color: var(--cyan-0);
+  }
+
+  .preview-section {
+    background-color: var(--gray-8);
+  }
+}
